src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__cast_string_to_uint16__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: UInt16,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: UInt16,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastUint16ToString(
            CastUint16ToString,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
